[project]
name = "textual-trials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "textual-dev>=1.7.0",
    "textual-theme-editor>=0.1.0",
    "textual~=8.0",
]
[dependency-groups]
dev = [
  "commitizen>=4.8.3",
  "poethepoet>=0.36.0",
  "ruff>=0.15.0",
  "textual-dev>=1.7.0",
  "ty==0.0.20",
]

[tool.poe.tasks]
block-failed-input = "block_failed_input.py"
inspector = "inspector/inspector.py"
drag-and-drop = "drag-and-drop-test.py"
loading-has-no-size = "loading_has_no_size.py"
multi-progress-bar-icons = "progressbar/multi_progress_bar_icons.py"
narrow-options-with-input = "narrow_options_with_input.py"
notify-markup = "notify-markup.py"
progress-bar-states = "progressbar/progress_bar_states.py"
on-mount-matters-sync = "on-mount-matters/sync-version.py"
on-mount-matters-worker = "on-mount-matters/worker-version.py"
push-screen-wait-thread = "push_screen_wait_thread.py"
shake = "shake.py"
threads-and-should-cancel = "threads-and-stuff/threads_and_should_cancel.py"
toast-test = "toast_test.py"
workers-and-threads = "threads-and-stuff/workers_and_threads.py"
throttled = "throttler/throttled.py"
no-throttle = "throttler/no_throttle.py"

[tool.ruff.lint]
select = [
  "ASYNC251",
  "ANN",
  "COM819",
  "C400",
  "DOC",
  "D404",
  "E",
  "F",
  "I",
  "N801", "N802", "N805",
  "PLE1142",
  "Q",
  "SIM",
  "TD",
  "W",
]
ignore = ["W505", "E501", "ANN002", "ANN003", "TD002", "TD003"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true

[tool.ty.rules]
possibly-missing-import = "ignore"
unresolved-reference = "ignore" # handled by ruff
unresolved-attribute = "ignore"
